# VVIT

./: README.md
1 Курс/lab10/part1/: main.cpp
1 Курс/lab10/part2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
1 Курс/lab11/part1/: main.cpp
1 Курс/lab11/part2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
1 Курс/lab12/part1/: main.cpp
1 Курс/lab12/part2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
1 Курс/lab_13/Part_1/: main.cpp
1 Курс/lab_13/Part_2/: CMakeLists.txt  Logic.cpp  Logic.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
1 Курс/lab_14/Part_1/: main.cpp
1 Курс/lab_14/Part_2/: CMakeLists.txt  FilesLogic.cpp  FilesLogic.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
